# utils

./: cleanup.sh  install-all.sh  install-one.sh
cli/brightness/: Cargo.toml
cli/brightness/src/: main.rs
cli/fshuf/: Cargo.toml  README.md
cli/fshuf/src/: add.rs  build.rs  help.clml  main.rs  prefix.rs  rem.rs
cli/openweatherbar/: Cargo.toml
cli/openweatherbar/src/: main.rs
cli/pack/: index.lua
cli/timebar/: Cargo.toml
cli/timebar/src/: main.rs
fshuf/: .gitignore  Cargo.toml
fshuf/src/: _mod.rs  help.rs  main.rs  rem.rs
gui/launcher/: Cargo.toml
gui/launcher/src/: args.rs  event.rs  freedesktop.rs  logger.rs  main.rs  ui.rs
gui/launcher/src/state/: mod.rs
gui/launcher/src/state/data/: applications.rs  context.rs  mod.rs  rofi.rs
gui/launcher/src/state/ui/: components.rs  mod.rs
gui/launcher/src/state/ui/styles/: main.css  main.css.map  main.scss
gui/launcher/src/state/ui/window/: mod.rs
gui/launcher/src/state/ui/window/vbox/: mod.rs
gui/launcher/src/state/ui/window/vbox/bot/: actions.rs  mod.rs
gui/launcher/src/state/ui/window/vbox/bot/stack/: main.rs  mod.rs
gui/launcher/src/state/ui/window/vbox/top/: mod.rs
gui/launcher/src/state/ui/window/vbox/top/ctx/: mod.rs
jsgrep/: .gitignore
pkgs/2gif/: PKGBUILD
pkgs/brightness/: PKGBUILD
pkgs/fshuf/: PKGBUILD
pkgs/jsgrep/: PKGBUILD
pkgs/launcher/: PKGBUILD
pkgs/openweatherbar/: PKGBUILD
pkgs/pack/: PKGBUILD
pkgs/round-time-up/: PKGBUILD
pkgs/timebar/: PKGBUILD
