[package]
name = "launcher"
version = "0.1.1"
authors = ["Jack Johannesen <jack@insertdomain.name>"]
edition = "2018"

[dependencies]
gtk = "0.9.2"
gio = "0.9.1"
gdk = "0.13.2"
glib = "0.10.0"
pango = "0.9.1"
x11rb = "0.6.0"
interpolation = "0.2.0"
crossbeam = "0.7.3"
log = "0.4.11"
chrono = "0.4.15"
clap = "2.33"
lazy_static = "1.4.0"
regex = "1.4"

[dependencies.cairo-rs]
version = "0.9.0"
features = [ "png" ]

